<resources>
    <string name="app_name">XRoad</string>
    <string name="app_logo">App logo</string>

    <!--  Buttons  -->
    <string name="ok_label">OK</string>
    <string name="next_label">Next</string>
    <string name="back_label">Back</string>
    <string name="done_label">Done</string>

    <!--  Toolbar  -->
    <string name="title_and_topic_label">Title and Topic</string>
    <string name="description_label">Description</string>
    <string name="duration_label">Duration</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="date_label">Date</string>
    <string name="path_label">Path</string>
    <string name="all_paths_label">All Paths</string>
    <string name="analytics_chart_label">Chart</string>

    <!--  Path  -->
    <string name="title_label">Title</string>
    <string name="topic_label">Topic</string>
    <string name="add_new_path_label">Add a new path</string>
    <string name="last_path_label">Last Path</string>

    <!--  Difficulty labels  -->
    <string name="very_easy_label">Very Easy</string>
    <string name="easy_label">Easy</string>
    <string name="normal_label">Normal</string>
    <string name="hard_label">Hard</string>
    <string name="very_hard_label">Very Hard</string>

    <!--  Menu  -->
    <string name="options_label">Options</string>
    <string name="restore_values_label">Restore values</string>
    <string name="home_label">Home</string>
    <string name="paths_label">Paths</string>
    <string name="analytics_label">Analytics</string>

    <!--  Last path  -->
    <string name="last_path_title_label">title: %s</string>
    <string name="last_path_topic_label">topic: %s</string>
    <string name="last_path_duration_label">duration: %s</string>
    <string name="last_path_date_label">date: %s</string>
    <string name="days_label">%d Days</string>
    <string name="day_label">1 Day</string>

    <!--  Days of the week  -->
    <string name="sunday_label">Sunday</string>
    <string name="monday_label">Monday</string>
    <string name="tuesday_label">Tuesday</string>
    <string name="wednesday_label">Wednesday</string>
    <string name="thursday_label">Thursday</string>
    <string name="friday_label">Friday</string>
    <string name="saturday_label">Saturday</string>

    <!--  Months of the year  -->
    <string name="january_label">January</string>
    <string name="february_label">February</string>
    <string name="march_label">March</string>
    <string name="april_label">April</string>
    <string name="may_label">May</string>
    <string name="june_label">June</string>
    <string name="july_label">July</string>
    <string name="august_label">August</string>
    <string name="september_label">September</string>
    <string name="october_label">October</string>
    <string name="november_label">November</string>
    <string name="december_label">December</string>

    <!--  Colors of the month  -->
    <string name="january_light_blue_label">#ADD8E6</string>
    <string name="february_pink_label">#FFC0CB</string>
    <string name="march_purple_label">#A020F0</string>
    <string name="april_grass_green_label">#7CFC00</string>
    <string name="may_lilac_label">#C8A2C8</string>
    <string name="june_pearl_label">#E2DFD2</string>
    <string name="july_yellow_label">#FFFF00</string>
    <string name="august_orange_label">#FFA500</string>
    <string name="september_bright_blue_label">#0096FF</string>
    <string name="october_indigo_label">#4B0082</string>
    <string name="november_gold_label">#FFD700</string>
    <string name="december_dark_red">#8b0000</string>

    <!-- Chart Bar colors -->
    <string name="red_primary">#FF1E00</string>
    <string name="white_primary">#E8F9FD</string>
    <string name="green_primary">#59CE8F</string>
    <string name="gray_primary">#333533</string>
    <string name="white">#FFFFFF</string>

    <!--  Chart colors  -->
    <string name="chart_background_color">#F6F6F6</string>

    <!--  Chart labels  -->
    <string name="paths_expertise_label">All paths to Expertise</string>
    <string name="hours_label">Hours</string>
    <string name="average_hours_label">Average Hours</string>
    <string name="average_hours_week_day_label">Average hours per days of week</string>
    <string name="week_chart_label">Week Chart</string>
    <string name="difficulty_chart_label">Difficulty Chart</string>
    <string name="month_chart_label">Month Chart</string>
    <string name="hour_difficulty_label">Average hours per difficulty</string>
    <string name="average_hours_month_label">Average hours per month</string>
    <string name="hours_day_week_label">Hours/Day of Week</string>
    <string name="hours_month_label">Hours/Month</string>
    <string name="hours_difficulty_label">Hours/Difficulty</string>
    <string name="path_charts_label">Path Charts</string>
</resources>