<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/analytics_navigation"
    app:startDestination="@id/analyticsFragment">

    <fragment
        android:id="@+id/analyticsFragment"
        android:name="com.example.xroad.ui.analytics.AnalyticsFragment"
        android:label="@string/analytics_label"
        tools:layout="@layout/fragment_analytics">

        <action
            android:id="@+id/action_analytics_to_month_chart"
            app:destination="@id/analyticsChartFragment" />

        <action
            android:id="@+id/action_analytics_to_week_chart"
            app:destination="@id/analyticsWeekChartFragment" />

        <action
            android:id="@+id/action_analytics_to_difficulty_chart"
            app:destination="@id/analyticsDifficultyChartFragment" />
    </fragment>

    <fragment
        android:id="@+id/analyticsChartFragment"
        android:name="com.example.xroad.ui.analytics.month.AnalyticsMonthChartFragment"
        android:label="@string/analytics_chart_label"
        tools:layout="@layout/fragment_analytics_month_chart" />

    <fragment
        android:id="@+id/analyticsWeekChartFragment"
        android:name="com.example.xroad.ui.analytics.week.AnalyticsWeekChartFragment"
        android:label="@string/week_chart_label"
        tools:layout="@layout/fragment_analytics_week_chart" />

    <fragment
        android:id="@+id/analyticsDifficultyChartFragment"
        android:name="com.example.xroad.ui.analytics.difficulty.AnalyticsDifficultyChartFragment"
        android:label="@string/difficulty_chart_label"
        tools:layout="@layout/fragment_analytics_difficulty_chart" />
</navigation>