<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
            android:hint="@string/days_label"
            android:padding="8dp"
            android:textSize="16sp"
            android:textStyle="italic" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/last_path_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_path_label"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_path_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_path_title_label"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_path_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_path_topic_label"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_path_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_path_duration_label"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/last_path_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_path_date_label"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/chart_path"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:minHeight="240dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/add_new_path_label"
            android:src="@drawable/baseline_add_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>